k8s/auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: auth
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 3
            periodSeconds: 5
            httpGet:
              path: /api/health/
              port: 80
